# devforge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  version-bump.yml
docs/: secrets.md
scripts/: bump_version.py  generate_changelog.py  github_secrets.py  scan_secrets.py  setup_git_hooks.ps1  setup_git_hooks.sh  setup_secret_hooks.ps1  setup_secret_hooks.sh  validate_commit_msg.py
src/: __init__.py  template_engine.py
src/cli/: __init__.py  docs.py  main.py  prompts.py  registry.py  secrets.py
src/core/: __init__.py  config_models.py  errors.py  file_writer.py  plugin_manager.py  preset_loader.py  project_generator.py  registry.py  secrets_manager.py  validators.py  version.py
src/plugins/: __init__.py  example_plugin.py
src/templates/: .gitignore.template  README.md.template  __init__.py
src/templates/backend/: entrypoint.sh.template  seed.py.template
src/templates/ci/: Jenkinsfile.template  github-actions.yml.template  github-secrets.template
src/templates/docs/: ci.md.template  cloud.md.template  env.md.template  index.md.template  install.md.template  mkdocs.yml.template  usage.md.template
src/tests/: __init__.py  conftest.py  test_cli.py  test_cli_errors.py  test_cloud.py  test_config_models.py  test_database_engines.py  test_docs.py  test_file_writer.py  test_github_secret_sync.py  test_plugins.py  test_port_resolution.py  test_preset_loader.py  test_project_generator.py  test_registry.py  test_secret_injection.py  test_secret_scanner.py  test_secrets.py  test_template_engine.py  test_ui.py  test_validators.py
src/ui/: __init__.py  app.py
test_output_v2/test_frontend_project_v2/: .gitignore  README.md  docker-compose.yml
(+33 files in other folders)
