[build-system]
requires = ["setuptools>=61.0", "wheel", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devforge"
version = "0.1.0"
description = "Generate complete local development environments for web projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "DevForge Contributors"}
]
dependencies = [
    "jinja2>=3.1.0",
]

[project.scripts]
devforge = "src.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1"
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "build>=0.10.0",
    "pip-audit>=2.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85

